tg-25 crea component sidenav para menu lateral

--- a/front-end/webapp/src/assets/styles/variables.scss
+++ b/front-end/webapp/src/assets/styles/variables.scss
@@ -1,6 +1,6 @@
 $sgh-default-fonts: Roboto, Verdana, sans-serif;
 
-$color-primary: #00A1D4;
+$color-primary: #4E5083;
 $color-secondary: #39ADA6;
 
 //font sizes
