tg-52 home page components pacientes, tabla pacientes

--- a/front-end/webapp/src/app/modules/pacientes/routes/home/home.component.html
+++ b/front-end/webapp/src/app/modules/pacientes/routes/home/home.component.html
@@ -1,21 +1,9 @@
 <app-content width="full">
 	<h1 [translate]="'pacientes.home.TITLE'">Pacientes</h1>
+	<app-search-create></app-search-create>
 
-	<mat-card>
-		<mat-card-header>
-			<mat-card-title [translate]="'pacientes.home.find_add_section.TITLE'"></mat-card-title>
-		</mat-card-header>
-		<mat-card-content>
-			<p ></p>
-		</mat-card-content>
-		<mat-card-footer>
-			<button mat-stroked-button color="primary" (click)="onClickBusqueda()">
-				<span [translate]="'pacientes.home.find_add_section.BUTTON_SEARCH'"></span>
-			</button>
-			<button mat-stroked-button color="primary" (click)="onClickAdd()">
-				<span [translate]="'pacientes.home.find_add_section.BUTTON_ADD'"></span>
-			</button>
-		</mat-card-footer>
-	</mat-card>
+	<h1 [translate]="'pacientes.home.TITLE_SEARCH'">Búsqueda de pacientes</h1>
+	<app-pacientes-table></app-pacientes-table>
+
 </app-content>
 
