--- a/front-end/webapp/src/app/modules/pacientes/routes/home/home.component.html
+++ b/front-end/webapp/src/app/modules/pacientes/routes/home/home.component.html
@@ -1,9 +1,11 @@
 <app-content width="full">
-	<h1 [translate]="'pacientes.home.TITLE'">Pacientes</h1>
-	<app-search-create></app-search-create>
-
-	<h1 [translate]="'pacientes.home.TITLE_SEARCH'">Búsqueda de pacientes</h1>
-	<app-pacientes-table></app-pacientes-table>
-
+	<section>
+		<h1 [translate]="'pacientes.home.TITLE'">Pacientes</h1>
+		<app-search-create></app-search-create>
+	</section>
+	<section>
+		<h1 [translate]="'pacientes.home.TITLE_SEARCH'">Búsqueda de pacientes</h1>
+		<app-pacientes-table></app-pacientes-table>
+	</section>
 </app-content>
 
