tg-52 encabezados de tabla, mixins para formularios

--- a/front-end/webapp/src/app/modules/pacientes/component/search-create/search-create.component.scss
+++ b/front-end/webapp/src/app/modules/pacientes/component/search-create/search-create.component.scss
@@ -6,4 +6,12 @@
 	mat-card-content {
 		@include card-content;
 	}
+
+	.mat-radio-button {
+		@include form-radio-button;
+	}
+
+	.mat-form-field + .mat-form-field {
+		@include form-field;
+	}
 }
