--- a/front-end/webapp/src/assets/styles/mixins.scss
+++ b/front-end/webapp/src/assets/styles/mixins.scss
@@ -13,3 +13,11 @@
 @mixin card-content {
 	margin: 0 16px;
 }
+
+@mixin form-radio-button {
+	margin: 5px 10px;
+}
+
+@mixin form-field {
+	margin-left: 10px;
+}
