--- a/front-end/webapp/src/app/modules/pacientes/component/pacientes-table/pacientes-table.component.html
+++ b/front-end/webapp/src/app/modules/pacientes/component/pacientes-table/pacientes-table.component.html
@@ -5,32 +5,32 @@
 <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
 	<ng-container matColumnDef="ID Paciente">
-		<th mat-header-cell *matHeaderCellDef></th>
+		<th mat-header-cell *matHeaderCellDef>ID Paciente</th>
 		<td mat-cell *matCellDef="let element"> {{element.id}} </td>
 	</ng-container>
 
 	<ng-container matColumnDef="Nro. Documento">
-		<th mat-header-cell *matHeaderCellDef></th>
+		<th mat-header-cell *matHeaderCellDef>Nro. Documento</th>
 		<td mat-cell *matCellDef="let element"> {{element.name}} </td>
 	</ng-container>
 
 	<ng-container matColumnDef="Nombres">
-		<th mat-header-cell *matHeaderCellDef></th>
+		<th mat-header-cell *matHeaderCellDef>Nombres</th>
 		<td mat-cell *matCellDef="let element"> {{element.weight}} </td>
 	</ng-container>
 
 	<ng-container matColumnDef="Apellidos">
-		<th mat-header-cell *matHeaderCellDef></th>
+		<th mat-header-cell *matHeaderCellDef>Apellidos</th>
 		<td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
 	</ng-container>
 
 	<ng-container matColumnDef="F. Nac">
-		<th mat-header-cell *matHeaderCellDef></th>
+		<th mat-header-cell *matHeaderCellDef>F. Nac</th>
 		<td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
 	</ng-container>
 
 	<ng-container matColumnDef="Sexo">
-		<th mat-header-cell *matHeaderCellDef></th>
+		<th mat-header-cell *matHeaderCellDef>Sexo</th>
 		<td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
 	</ng-container>
 
