tg-73 Crea modulo internacion muda sidenav y bar a la app

--- a/front-end/webapp/src/app/modules/core/components/bar/bar.component.html
+++ b/front-end/webapp/src/app/modules/core/components/bar/bar.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar>
 	<mat-toolbar-row class="mat-elevation-z6">
 		<ng-content></ng-content>
-		<h1 [translate]="'header.TITLE'"></h1>
+		<h1 [translate]="'app.header.TITLE'"></h1>
 	</mat-toolbar-row>
 </mat-toolbar>
