--- a/front-end/webapp/src/app/modules/core/components/sidenav/sidenav.component.html
+++ b/front-end/webapp/src/app/modules/core/components/sidenav/sidenav.component.html
@@ -1,4 +1,4 @@
-<mat-sidenav-container class="sidenav-container">
+<mat-sidenav-container autosize class="sidenav-container">
 	<mat-sidenav mode="side" opened>
 		<mat-nav-list>
 			<mat-list-item
