--- a/front-end/webapp/src/app/app.component.html
+++ b/front-end/webapp/src/app/app.component.html
@@ -1,3 +1,6 @@
 <div class="app mat-typography mat-app-background">
-	<router-outlet></router-outlet>
+	<app-bar></app-bar>
+	<app-sidenav [menuItems]="menuItems">
+		<router-outlet></router-outlet>
+	</app-sidenav>
 </div>
