tg-64 home busqueda rapida de paciente, ajustes en formulario de busqueda

--- a/front-end/webapp/src/app/modules/pacientes/component/search-create/search-create.component.html
+++ b/front-end/webapp/src/app/modules/pacientes/component/search-create/search-create.component.html
@@ -43,8 +43,8 @@
 				<mat-label>Sexo</mat-label>
 				<div class="">
 					<mat-radio-group name="gender" id="gender" formControlName="gender">
-						<mat-radio-button *ngFor="let gender of genderOptions" [value]="gender">
-							{{gender}}
+						<mat-radio-button *ngFor="let gender of genderOptions" [value]="gender.id">
+							{{gender.description}}
 						</mat-radio-button>
 					</mat-radio-group>
 					<mat-error *ngIf="formSearchSubmitted &&  hasError(formSearch, 'required', 'gender')">
