tg-90 busqueda de paciente - componente table material para resultados con coincidencias

--- a/front-end/webapp/src/app/modules/pacientes/routes/search/search.component.html
+++ b/front-end/webapp/src/app/modules/pacientes/routes/search/search.component.html
@@ -107,7 +107,7 @@
 			</form>
 		</div>
 	</section>
-	<div class="container" *ngIf="!viewSearchComponent()">
+	<div class="container" >
 		<app-partial-matches-table>
 		</app-partial-matches-table>
 	</div>
