--- a/front-end/webapp/src/app/modules/pacientes/component/partial-matches-table/partial-matches-table.component.html
+++ b/front-end/webapp/src/app/modules/pacientes/component/partial-matches-table/partial-matches-table.component.html
@@ -1,1 +1,46 @@
-<p>partial-matches-table works!</p>
+<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+
+	<ng-container matColumnDef="ID">
+		<th mat-header-cell *matHeaderCellDef>ID</th>
+		<td mat-cell *matCellDef="let element"> {{element.id}} </td>
+	</ng-container>
+
+	<ng-container matColumnDef="Nombres">
+		<th mat-header-cell *matHeaderCellDef>Nombres</th>
+		<td mat-cell *matCellDef="let element"> {{element.person.name}} </td>
+	</ng-container>
+
+	<ng-container matColumnDef="Apellidos">
+		<th mat-header-cell *matHeaderCellDef>Apellidos</th>
+		<td mat-cell *matCellDef="let element"> {{element.person.lastName}} </td>
+	</ng-container>
+
+	<ng-container matColumnDef="Sexo">
+		<th mat-header-cell *matHeaderCellDef>Sexo</th>
+		<td mat-cell *matCellDef="let element"> {{element.person.gender.description}} </td>
+	</ng-container>
+
+	<ng-container matColumnDef="F. Nac">
+		<th mat-header-cell *matHeaderCellDef>F. Nac</th>
+		<td mat-cell *matCellDef="let element"> {{element.person.birthDate}} </td>
+	</ng-container>
+
+	<ng-container matColumnDef="DNI">
+		<th mat-header-cell *matHeaderCellDef>DNI</th>
+		<td mat-cell *matCellDef="let element"> {{element.person.identificationNumber}} </td>
+	</ng-container>
+
+	<ng-container matColumnDef="Estado">
+		<th mat-header-cell *matHeaderCellDef>Estado</th>
+		<td mat-cell *matCellDef="let element"> {{element.type.description}} </td>
+	</ng-container>
+
+	<ng-container matColumnDef="Coincidencia">
+		<th mat-header-cell *matHeaderCellDef>Coincidencia</th>
+		<td mat-cell *matCellDef="let element"> {{element.ranking}} </td>
+	</ng-container>
+
+	<tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+	<tr mat-row *matRowDef="let row; columns: displayedColumns;"  (click)="getPatient(row)"></tr>
+</table>
+
