--- a/front-end/webapp/src/app/modules/pacientes/component/pacientes-table/pacientes-table.component.html
+++ b/front-end/webapp/src/app/modules/pacientes/component/pacientes-table/pacientes-table.component.html
@@ -37,7 +37,7 @@
 	<ng-container matColumnDef="Action">
 		<th mat-header-cell *matHeaderCellDef></th>
 		<td mat-cell *matCellDef="let element">
-			<button mat-flat-button color="primary" (click)="actionRow(element.id)">
+			<button mat-flat-button color="primary" (click)="actionRow()">
 				Ver
 			</button>
 		</td>
