--- a/front-end/webapp/src/app/modules/pacientes/routes/home/home.component.html
+++ b/front-end/webapp/src/app/modules/pacientes/routes/home/home.component.html
@@ -1,10 +1,10 @@
 <app-content width="full">
 	<section>
-		<h1 [translate]="'pacientes.home.TITLE'">Pacientes</h1>
+		<h1 [translate]="'pacientes.home.TITLE'"></h1>
 		<app-search-create></app-search-create>
 	</section>
 	<section>
-		<h1 [translate]="'pacientes.home.TITLE_SEARCH'">Búsqueda de pacientes</h1>
+		<h1 [translate]="'pacientes.home.TITLE_SEARCH'"></h1>
 		<app-pacientes-table></app-pacientes-table>
 	</section>
 </app-content>
