--- a/front-end/webapp/src/styles.scss
+++ b/front-end/webapp/src/styles.scss
@@ -13,3 +13,11 @@ body {
 section {
 	margin: 3vh 0;
 }
+
+.capitalize {
+	text-transform: capitalize;
+}
+
+.uppercase {
+	text-transform: uppercase;
+}
