tg-104. [BE] Fix dtos de respuestas del listado

--- a/front-end/webapp/src/app/modules/internacion/components/internaciones-table/internaciones-table.component.html
+++ b/front-end/webapp/src/app/modules/internacion/components/internaciones-table/internaciones-table.component.html
@@ -6,17 +6,17 @@
 
 	<ng-container matColumnDef="ID Paciente">
 		<th mat-header-cell *matHeaderCellDef>ID Paciente</th>
-		<td mat-cell *matCellDef="let element"> {{ element.patient.patientId }} </td>
+		<td mat-cell *matCellDef="let element"> {{ element.patient.id }} </td>
 	</ng-container>
 
 	<ng-container matColumnDef="Nombre Médico">
 		<th mat-header-cell *matHeaderCellDef>Nombre Médico</th>
-		<td mat-cell *matCellDef="let element"> {{ element.doctor.surname }} </td>
+		<td mat-cell *matCellDef="let element"> {{ element.doctor.lastName }} </td>
 	</ng-container>
 
 	<ng-container matColumnDef="Apellido Médico">
 		<th mat-header-cell *matHeaderCellDef>Apellido Médico</th>
-		<td mat-cell *matCellDef="let element"> {{ element.doctor.name }} </td>
+		<td mat-cell *matCellDef="let element"> {{ element.doctor.firstName }} </td>
 	</ng-container>
 
 	<ng-container matColumnDef="Sector">
